add swagger config

--- a/loan-module/src/main/resources/application.properties
+++ b/loan-module/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 #hibernate
 spring.jpa.hibernate.ddl/-auto=update
+
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
