--- a/user-module/pom.xml
+++ b/user-module/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>user-module</artifactId>
+    <artifactId>loanUser-module</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>user-module</name>
-    <description>user-module</description>
+    <name>loanUser-module</name>
+    <description>loanUser-module</description>
     <url/>
     <licenses>
         <license/>
@@ -65,9 +65,20 @@
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.11.5</version>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.11.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId> <!-- Use Jackson for JSON parsing -->
+            <version>0.11.5</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-test</artifactId>
@@ -92,7 +103,7 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.1.0</version>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
