api gateway config

--- a/loan-module/src/main/resources/application.properties
+++ b/loan-module/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl/-auto=update
 
 # Enable or disable Swagger UI
 springdoc.swagger-ui.enabled=true
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
