--- a/user-module/src/main/resources/application.properties
+++ b/user-module/src/main/resources/application.properties
@@ -18,5 +18,7 @@ spring.main.allow-circular-references=true
 
 # Enable or disable Swagger UI
 springdoc.swagger-ui.enabled=true
-
 #http://localhost:8010/swagger-ui/index.html
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
