--- a/eureka/src/main/resources/application.properties
+++ b/eureka/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.application.name=eureka
 server.port=8761
+
 #does not allow eureka server to register itself
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
 
