--- a/loan-module/pom.xml
+++ b/loan-module/pom.xml
@@ -84,6 +84,11 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
